--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -92,6 +92,9 @@ rules:
         if: { after: false }
         for: { after: false }
         while: { after: false }
+  '@typescript-eslint/no-invalid-void-type':
+    - error
+    - allowAsThisParameter: true
   '@typescript-eslint/no-non-null-assertion': off
   '@typescript-eslint/space-before-function-paren':
     - error
