--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "my-template",
+  "name": "shapez-lab",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 62162",
     "lint": "eslint . --ext .js,.ts,.tsx --fix",
     "build": "next build",
     "start": "next start"
@@ -11,6 +11,7 @@
   "dependencies": {
     "lodash": "^4.17.21",
     "modern-normalize": "^1.0.0",
+    "monet": "^0.9.2",
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -26,6 +27,7 @@
     "@typescript-eslint/parser": "^4.15.2",
     "eslint": "^7.21.0",
     "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-config-standard-with-typescript": "^20.0.0",
